# genericsuite-be

./: .env-example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
examples/: chaos_experiments_demo.py
genericsuite/: CHANGELOG.md
genericsuite/chalicelib/: framework_abstraction.py
genericsuite/chalicelib/endpoints/: chaos_experiments.py  logs.py  menu_options.py  storage_retrieval.py  users.py
genericsuite/chalicelib/util/: blueprint_one.py  create_app.py  generic_endpoint_builder.py
genericsuite/config/: config.py  config_from_db.py  config_secrets.py  logging.conf.yml
genericsuite/constants/: const_tables.py
genericsuite/fastapilib/: framework_abstraction.py  framework_abstraction_PROPOSAL.py
genericsuite/fastapilib/endpoints/: api_documentation.py  chaos_experiments.py  logs.py  menu_options.py  storage_retrieval.py  users.py
genericsuite/fastapilib/util/: blueprint_one.py  create_app.py  dependencies.py  generic_endpoint_builder.py  parse_multipart.py
genericsuite/flasklib/: framework_abstraction.py
genericsuite/flasklib/endpoints/: chaos_experiments.py  logs.py  menu_options.py  storage_retrieval.py  users.py
genericsuite/flasklib/util/: blueprint_one.py  create_app.py  generic_endpoint_builder.py  jwt.py  parse_multipart.py
genericsuite/mcplib/: framework_abstraction.py
genericsuite/mcplib/endpoints/: users.py
genericsuite/mcplib/util/: McpClientApp.py  McpServerApp.py  create_app.py  utilities.py
genericsuite/models/billing/: billing_utilities.py
genericsuite/models/chaos/: README.md  __init__.py  chaos_experiments.py
genericsuite/models/logs/: logs.py
genericsuite/models/menu_options/: menu_options.py
genericsuite/models/users/: users.py
genericsuite/util/: app_context.py  app_logger.py  aws.py  aws_secrets.py  azure.py  azure_secrets.py  blueprint_one.py  cloud_provider_abstractor.py  config_dbdef_helpers.py  current_user_data.py  datetime_utilities.py  db_abstractor.py  db_abstractor_dynamodb.py  db_abstractor_elem_match.py  db_abstractor_mongodb.py  db_abstractor_mysql.py  db_abstractor_postgresql.py  db_abstractor_sql.py  db_abstractor_supabase.py  db_abstractor_super.py  encryption.py  exceptions.py  file_utilities.py  framework_abs_layer.py  gcp.py  gcp_secrets.py  generic_db_helpers.py  generic_db_helpers_super.py  generic_db_helpers_with_request.py  generic_db_middleware.py  generic_endpoint_helpers.py  jwt.py  nav_helpers.py  parse_multipart.py  passwords.py  request_handler.py  schema_utilities.py  security.py  send_email.py  storage.py  (+2 more)
tests/: reproduce_pydantic_migration.py  test_chaos_experiments.py  test_db_abstractor_dynamodb_operators.py  test_db_abstractor_mysql_mock.py  test_db_abstractor_postgresql_mock.py  test_db_abstractor_sql.py  test_db_abstractor_supabase_operators.py  test_verify_log_sanitization.py  verify_log_sanitization.py
