[project]
name = "genericsuite"
version = "0.1.9"
authors = [
    { name="Carlos J. Ramirez", email="tomkat_cr@yahoo.com" }
]
description = "The GenericSuite for Python (backend version)"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    "License :: OSI Approved :: ISC License",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    'Topic :: Software Development',
]
dynamic = [
    "license",
]

[project.urls]
Homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-Core/"
Issues = "https://github.com/tomkat-cr/genericsuite-be/issues"

[tool.poetry]
name = "genericsuite"
version = "0.1.9"
description = "The GenericSuite for Python (backend version)"
authors = ["Carlos J. Ramirez <tomkat_cr@yahoo.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/tomkat-cr/genericsuite-be.git"
homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-Core/"
packages = [
    { include = "genericsuite" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
boto3 = "^1.24.55"
s3transfer = "^0.10.0"
python-dateutil = "^2.8.2"
wheel = "^0.41.3"
marshmallow = "^3.19.0"
requests = "^2.31.0"
pyjwt = "^2.8.0"
werkzeug = "^3.0.1"
dnspython = "^2.6.0rc1"
pymongo = "^4.6.0"
cryptography = "^42.0.7"
botocore = "^1.35.21"
urllib3 = "1.26"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
changelog-cli = "^0.7.1"
mypy = "^0.931"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"
coverage = "^7.2.7"
pylint = "^3.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
