[project]
name = "genericsuite"
version = "0.2.0"
authors = [
    { name="Carlos J. Ramirez", email="info@genericsuite.com" }
]
description = "The GenericSuite for Python (backend version)"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Operating System :: OS Independent",
    'Topic :: Software Development',
]
dynamic = [
    "license",
]

[project.urls]
Homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-Core/"
Issues = "https://github.com/tomkat-cr/genericsuite-be/issues"

[tool.poetry]
name = "genericsuite"
version = "0.2.0"
description = "The GenericSuite for Python (backend version)"
authors = ["Carlos J. Ramirez <info@genericsuite.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/tomkat-cr/genericsuite-be.git"
homepage = "https://genericsuite.carlosjramirez.com/Backend-Development/GenericSuite-Core/"
packages = [
    { include = "genericsuite" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pyjwt = "^2.8.0"
werkzeug = "^3.0.6"
cryptography = "^44.0.1"
pydantic = "^2.9.2"
urllib3 = "^2.5.0"
requests-toolbelt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
changelog-cli = "^0.7.1"
mypy = "^0.931"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
yapf = "^0.32.0"
coverage = "^7.2.7"
pylint = "^3.1.0"
flake8 = "^7.0.0"
build = "^1.3.0"
twine = "6.0.0"
pymongo = "^4.15.5"
boto3 = "^1.42.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
